<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="email"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
    android:inputType="textPassword"
    android:autofillHints="password"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
    android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/back_to_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
    android:layout_marginTop="8dp"/>
</LinearLayout>



