<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.teacher.EditProfileActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="43dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:contentDescription="@string/back"
        android:scaleType="centerInside"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardarCambiosPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="68dp"
        android:text="@string/save"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDescartarCambiosPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="52dp"
        android:text="@string/discard"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/btnGuardarCambiosPerfil"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tituloEditarPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/teacher_edit_profile"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/circle_background"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="297dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/name"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPerfil" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="297dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/surnames"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombre" />

    <TextView
        android:id="@+id/tvAsignaturas"
        android:layout_width="300dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_background"
        android:drawableRight="@drawable/ic_arrow_drop_down"
        android:hint="@string/subjects"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etApellidos" />



</androidx.constraintlayout.widget.ConstraintLayout>