<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_role"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <!-- CardView para Estudiante -->
    <androidx.cardview.widget.CardView
        android:id="@+id/student_card"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/student_logo"
                android:contentDescription="@string/student_image_desc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_role"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- CardView para Profesor -->
    <androidx.cardview.widget.CardView
        android:id="@+id/teacher_card"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/student_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/teacher_logo"
                android:contentDescription="@string/teacher_image_desc"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_role"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Botón para cerrar sesión -->
    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>



