<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.teacher.TeacherActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="43dp"
        android:layout_margin="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/back"
        android:scaleType="centerInside"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teacher_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/teacher_welcome"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manage_classes_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/manage_classes"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/teacher_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>

